--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -1,22 +1,25 @@
 <div class="contain">
+    <!--封面-->
     <div class="split">
-        <div class="agree-cover-num"><strong>编号：<u>{{ counter_obj.counter_num }}</u></strong></div>
-        <div class="agree-cover-tit"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
-        <div class="agree-cover-edition"></div>
-        <div class="agree-cover-bot"><strong>成都武侯武兴小额贷款有限责任公司</strong></div>
+        <div>{% include 'dbms/agree/agree_board/loan_co/cover.html' %}</div>
     </div>
+    <!--正文-->
     <div class="split">
+        <!--合同当事人-->
         <div>
-            <div>{% include 'dbms/agree/agree_board/loan_co/hp-1.html' %}</div>
+            <div class="agree-tit"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
+            <div>{% include 'dbms/agree/agree_board/loan_co/hp-d.html' %}</div>
             <div style="padding-bottom: 15pt">
                 <p>抵押权人：<u>成都武侯武兴小额贷款有限责任公司</u></p>
                 <p>法定代表人（负责人）：<u>黄一平</u></p>
                 <p>住所：<u>成都市武侯区武科西五路360号西部智谷B区2栋3单元10楼</u></p>
             </div>
         </div>
+        <!--合同主体-->
         <div>
-            <p>为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。</p>
-            <p><strong>第一条  抵押财产</strong></p>
+            <p>为保障抵押权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）的履行，保障抵押权人权利的实现，抵押人愿意以其合法所有的财产为抵押权人设定抵押权，抵押人、抵押权人依照我国有关法律、法规，经协商一致，订立本合同。
+            </p>
+            <p><strong>第一条 抵押财产</strong></p>
             <p>1.1抵押人提供的抵押财产是：<strong><u>详见抵押物清单</u></strong>（以下称“抵押物”）。</p>
             <p>1.2抵押财产的详细情况以本合同所附“抵押物清单”为准。</p>
             <p>1.3抵押权的效力及于抵押物及其从物、从权利、附着物、附合物、加工物、孳息及代位物。</p>
@@ -26,7 +29,7 @@
                 {% if counter_obj.warrant_counter.warrant.all.0.ownership_warrant.all %}
                     {% for warrant in counter_obj.warrant_counter.warrant.all %}
                         {% for ownership in warrant.ownership_warrant.all %}
-                            {% if ownership.owner.genre == 2 and ownership.owner.spouses%}
+                            {% if ownership.owner.genre == 2 and ownership.owner.spouses %}
                                 、{{ ownership.owner.spouses.name }}
                             {% endif %}
                         {% endfor %}
@@ -36,17 +39,19 @@
                 {% endif %}
             </u></strong>
                 （签字）</p>
-            <p><strong>第二条  担保的主债权及担保范围</strong></p>
-            <p>2.1抵押担保的主债权为主合同项下贷款本金（大写）人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。</p>
+            <p><strong>第二条 担保的主债权及担保范围</strong></p>
+            <p>2.1抵押担保的主债权为主合同项下贷款本金（大写）人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。
+            </p>
             <p>2.2抵押权的存续期间至被担保的主债权诉讼时效届满之日止。</p>
             <p>2.3抵押人担保的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和实现债权的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、保险费、评估费、拍卖费、公告费、抵押物处置费、过户费、其他费用）以及其他所有主合同债务人的应付费用。</p>
-            <p>2.4<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论抵押权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，抵押权人均有权直接要求抵押人以抵押物在其担保范围内承担担保责任。</strong></p>
+            <p>2.4<strong>当主合同债务人未按主合同约定按时清偿本合同担保范围内债务时，无论抵押权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，抵押权人均有权直接要求抵押人以抵押物在其担保范围内承担担保责任。</strong>
+            </p>
             <p>2.5根据《中华人民共和国担保法》第五条的规定，本合同双方特别约定如下：</p>
             <p><strong>本合同效力独立于主合同，主合同或其有关条款无效时不影响本合同的效力。对债务人在主合同无效后应承担的返还责任或赔偿责任，抵押人应承担连带责任。</strong></p>
             <p><strong>抵押权人与主合同债务人解除借贷关系的，抵押人对主合同债务人应当承担的民事责任仍应承担担保责任。</strong></p>
-            <p><strong>第三条  抵押物的登记</strong></p>
+            <p><strong>第三条 抵押物的登记</strong></p>
             <p>抵押人应在本合同签订后立即向登记机关（构）办理本合同项下抵押物的抵押登记手续，并在登记手续办妥后三日内将他项权利证书、抵押登记证明文件正本及抵押物权属证明正本交抵押权人保管。</p>
-            <p><strong>第四条  保险</strong></p>
+            <p><strong>第四条 保险</strong></p>
             <p>签订本合同之时，抵押人则按下述第<u><strong>（1）</strong></u>项对抵押物进行财产保险：</p>
             <p>（1）无须对抵押物购买财产保险；</p>
             <p>若抵押物原已办有财产损失险，则出现抵押物赔付事故后保险人对抵押人的赔付金优先抵偿给抵押权人；若抵押物的价值减损或者有减损可能，应抵押权人要求抵押人须购买保险。</p>
@@ -61,7 +66,7 @@
             <p>⑧抵押人同意将保险公司的理赔款项（若有）划入抵押权人所指定的账户内，以作贷款之清偿或清偿准备；</p>
             <p>⑨抵押人在此不可撤销地委派和指定抵押权人为其真实合法的代理人，享有完全的代理权，并得全权代表抵押人（费用由抵押人负责），以抵押权人认为合适的方法代理履行或实施《保险合同》及其它法律文件中规定的应付款项义务，执行任何有关规定；</p>
             <p>⑩如果保险公司支付的赔偿费不足以重建、修复受损的资产或者清偿贷款，抵押人有义务重建或修复抵押物使其恢复受损前价值；抵押权人对不足清偿部分，有权向抵押人追偿。</p>
-            <p><strong>第五条  抵押人的陈述与保证</strong></p>
+            <p><strong>第五条 抵押人的陈述与保证</strong></p>
             <p>5.1 抵押人具有完全的权利和能力签订本合同。</p>
             <p>企业或者其他组织抵押人依法注册成立，所有必要的政府机构的批准都已获得且是充分的、有效的，将抵押物向抵押权人作抵押之事宜已经抵押人董事会或股东会（股东大会）等权力机构的有效决议确认并同意。</p>
             <p>5.2本合同条款是抵押人真实意思的表示，对抵押人具有法律约束力。抵押人根据本合同的担保行为不违反中华人民共和国任何法律、法规、条例或政府批准文件。</p>
@@ -72,7 +77,7 @@
             <p>5.7除了在本合同签署以前书面通知抵押权人以外，抵押人就其作为一方当事人与他人签署的任何合同或协议（包括本合同）或单方面做出的承诺书、保证书，未出现任何影响其在本合同项下履行能力的违约事件。</p>
             <p>5.8抵押人是抵押物唯一的法定和实际所有权（处分权）人。抵押前如果依法律规定或抵押人与第三人约定共有抵押物，抵押人必须如实告知抵押权人并按本合同第一条或抵押权人要求的其他方式与共有人出具同意抵押书面证明。抵押人保证抵押物不附带任何担保权益(本合同下设定的担保权益除外)，及任何影响或可能影响抵押权人对物行使抵押权的事件或情形。</p>
             <p>5.9上述声明在本合同项下的义务履行完毕之前应当持续有效，在本合同每次修改、补充、变更之日均视为由抵押人重复做出。</p>
-            <p><strong>第六条  抵押人的义务</strong></p>
+            <p><strong>第六条 抵押人的义务</strong></p>
             <p>6.1<strong>抵押权存续期间，未经抵押权人书面同意，抵押人不得以抵押物为第三方再行设置担保、转让、赠与、出租、抛弃等任何方式处分抵押物。</strong></p>
             <p>6.2抵押人应合理使用并妥善保管抵押物，不应以任何非正常的方式使用抵押物，不应改变抵押物的用途，应定时维修保养以保证抵押物的完好和价值。</p>
             <p>未经抵押权人同意,抵押人不将抵押物交由第三人保管或者改变其正常用途。</p>
@@ -99,12 +104,13 @@
             <p>（4）其他合法有效的处理方式。</p>
             <p>6.9抵押人因隐瞒抵押物存在共有、争议、被查封、被扣押、已设定抵押、拖欠税款、已出租或与第三人就抵押物发生任何纠纷等情况，而给抵押权人造成损失的，应向抵押权人予以足额赔偿。</p>
             <p>6.10抵押人未及时通知抵押物发生保险事故或者索赔，造成抵押权人损失的，应当承担赔偿责任。</p>
-            <p>6.11<strong>抵押权人和主合同债务人变更主合同（包括但不限于变更偿还币种、还款方式、贷款期限（含展期）、利率、贷款账号、还款账号、贷款用途、用款计划、还款计划、起息日、结息日内容）的，无论是否通知抵押人，抵押人仍应承担担保责任。但是，未征得抵押人书面同意增加合同金额、非因中国人民银行贷款基准利率调整或其他法定原因提高利率的，抵押人仅按本合同约定的金额、利率承担担保责任。</strong></p>
+            <p>6.11<strong>抵押权人和主合同债务人变更主合同（包括但不限于变更偿还币种、还款方式、贷款期限（含展期）、利率、贷款账号、还款账号、贷款用途、用款计划、还款计划、起息日、结息日内容）的，无论是否通知抵押人，抵押人仍应承担担保责任。但是，未征得抵押人书面同意增加合同金额、非因中国人民银行贷款基准利率调整或其他法定原因提高利率的，抵押人仅按本合同约定的金额、利率承担担保责任。</strong>
+            </p>
             <p>6.12抵押人应协助抵押权人实现抵押权并不会设置任何障碍。</p>
             <p>6.13抵押人同意，抵押权人也有权为本合同订立和履行之目的，通过中国人民银行信用信息基础数据库和其他依法设立的信用数据库查询抵押人的相关信息，以决定是否接受抵押人提供的担保；抵押权人亦可依据有关法律、法规、规范性文件的规定或金融监管机构的要求，将有关本合同的信息和其他相关信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
             <p>6.14抵押人应承担本合同项下有关抵押物的评估、登记、公证、鉴定、保险、保管、维修及保养等费用。</p>
             <p>6.15 主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对抵押人构成任何影响，抵押人仍应按照本合同承担担保责任。</p>
-            <p><strong>第七条  抵押权的实现</strong></p>
+            <p><strong>第七条 抵押权的实现</strong></p>
             <p>7.1 下列任一情况出现时，抵押权人有权与抵押人协议以抵押物折价或以拍卖、变卖抵押物所得的价款优先受偿或请求人民法院依法拍卖、变卖抵押物：</p>
             <p>（1）主合同债务人存在不履行到期债务、未按时足额偿还贷款本金及利息等主合同规定的违约行为，或者抵押权人宣布贷款提前到期而未获清偿；</p>
             <p>（2）第五条之陈述和保证不实或违反；</p>
@@ -118,7 +124,7 @@
             <p>（5）偿还本合同项下抵押人应支付但实际尚未支付的款项；</p>
             <p>（6）偿还主合同项下尚欠的贷款本金。</p>
             <p>抵押权人处分抵押物所得款项和其他收益若不足清偿抵押权人主合同及本合同项下债权，抵押权人有权向主合同债务人追索不足部分；若清偿抵押权人主合同及本合同项下债权有剩余，则剩余部分由抵押权人归还给抵押人。</p>
-            <p><strong>第八条  保证条款</strong></p>
+            <p><strong>第八条 保证条款</strong></p>
             <p>8.1 因下列原因致使抵押权不成立、未生效或无法实现的，抵押人应对主合同债务人在主合同项下的债务承担连带保证责任并赔偿抵押权人的其他损失：</p>
             <p>（1）抵押人未按第三条约定办理抵押物登记手续；</p>
             <p>（2）抵押人在第五条项下所作陈述与保证不真实；</p>
@@ -128,15 +134,17 @@
             <p>主合同中约定债务人可分期履行还款义务的，保证期间按各期还款义务分别计算，自每期债务履行期限届满之日起，计至最后一期债务履行期限届满之日后二年止。</p>
             <p>抵押权人（债权人）宣布主合同项下债务全部提前到期的，以其宣布的提前到期日为债务履行期限届满日。</p>
             <p>8.3本保证条款的效力独立于本合同其余条款，本保证条款的生效条件为本合同项下抵押权因第8.1款所列原因不成立、未生效或无法实现。</p>
-            <p><strong>第九条  公证、担保权实现及争议解决</strong></p>
+            <p><strong>第九条 公证、担保权实现及争议解决</strong></p>
             <p>9.1<strong>抵押人若不履行或不完全履行合同约定的义务，抵押人愿意接受依法强制执行。</strong></p>
             <p>抵押人、抵押权人双方均同意自本合同签署后3个工作日内到抵押权人所在地公证机构申请对本合同办理具有强制执行效力的公证。</p>
-            <p>9.2<strong>如果抵押人未按本合同约定及时承担担保责任清偿主合同债务人对抵押权人的债务，抵押权人有权向公证本合同的公证机构申请执行证书并凭本合同的公证书、执行证书、主合同、本合同向有管辖权的人民法院申请强制执行“抵押物清单”中所列的抵押物，抵押人自愿接受该有管辖权的人民法院强制执行。</strong></p>
-            <p>9.3<strong>如果抵押人未按本合同约定及时承担担保责任清偿主合同债务人对抵押权人的债务，抵押权人也有权不选择9.2款规定的方式而径行依据现行法律规定向有管辖权的人民法院申请实现担保物权。</strong></p>
+            <p>9.2<strong>如果抵押人未按本合同约定及时承担担保责任清偿主合同债务人对抵押权人的债务，抵押权人有权向公证本合同的公证机构申请执行证书并凭本合同的公证书、执行证书、主合同、本合同向有管辖权的人民法院申请强制执行“抵押物清单”中所列的抵押物，抵押人自愿接受该有管辖权的人民法院强制执行。</strong>
+            </p>
+            <p>9.3<strong>如果抵押人未按本合同约定及时承担担保责任清偿主合同债务人对抵押权人的债务，抵押权人也有权不选择9.2款规定的方式而径行依据现行法律规定向有管辖权的人民法院申请实现担保物权。</strong>
+            </p>
             <p>9.4若因任何原因，本合同不能/未以强制执行公证书直接由人民法院强制执行或不能/未以直接向人民法院申请实现担保物权的，关于本合同的所有争议、纠纷，选择下列第<u>（2）</u>种方式解决：</p>
             <p>（1）提交<u>/</u>仲裁委员会仲裁；</p>
             <p>（2）向抵押权人所在地有管辖权的法院提起诉讼。</p>
-            <p><strong>第十条  通讯及送达</strong></p>
+            <p><strong>第十条 通讯及送达</strong></p>
             <p>10.1本合同规定一方向相对方发出的通知或书面函件可通过当面递交、专递信函、传真或电子邮件、手机短信等电子通讯方式送达。</p>
             <p>10.2本合同双方确认的有效送达地址如下：</p>
             <div>{% include 'dbms/agree/agree_board/loan_co/notify-1.html' %}</div>
@@ -152,19 +160,36 @@
             <p>（4）如果是以电子邮件、手机短信等数据电文形式的，该等通知自发送之日视为已送达收件人。</p>
             <p>10.4本合同有效期间，任何一方的住所或通讯地址、联系人、联系方式等发生变更的，应当在变更后立即通知或可能发生前7个工作日内书面通知相对方；企业或者其他组织抵押人名称（自然人抵押人姓名）、住所等发生变化而未书面通知抵押权人，抵押权人按本合同所载名称（姓名）、通讯地址、住所向抵押人发送所有文书，视同已向抵押人送达。</p>
             <p>10.5抵押权人通过新闻媒体进行公告催收，公告期间超过15天即视为对主合同债务人、抵押人完成送达。</p>
-            <p><strong>第十一条  其他条款</strong></p>
+            <p><strong>第十一条 其他条款</strong></p>
             <p>11.1本合同所约定的抵押人应承担的主合同债权人/抵押权人所花费律师费（律师代理费）是指主合同债权人/抵押权人依据四川省现行律师服务收费规定如/即《四川省律师法律服务收费行业指导标准》(川发改价格〔2018〕93号)所计算并承担/支付/花费的费用；如果确实由于案情需要，主合同债权人/抵押权人采用了其他付费标准或计费方式，抵押人应据实承担。</p>
             <p>11.2在本合同有效期内，当抵押人的合法承继人依法承继抵押物时，本合同项下的各项责任和义务由该承继人承担。抵押权人根据本合同对抵押物拥有的抵押权不受上述承继情形的任何影响。承继人有责任于承继抵押物之日起十五日内向有管辖权的登记机关（构）办理抵押登记的变更手续，有关费用由承继人自行承担。</p>
-            <p>11.3 由于现行法律、法规的颁布、变更、解释、实施或因与此有关的登记程序的变更而使本合同效力受到影响或按本合同规定的条款处分抵押物与现行法律、法规相违背时，抵押人应根据抵押权人的书面要求直接或间接地签订补充合同和抵押文件，或履行抵押权人所合理要求的其他一切行为。</p>
+            <p>11.3由于现行法律、法规的颁布、变更、解释、实施或因与此有关的登记程序的变更而使本合同效力受到影响或按本合同规定的条款处分抵押物与现行法律、法规相违背时，抵押人应根据抵押权人的书面要求直接或间接地签订补充合同和抵押文件，或履行抵押权人所合理要求的其他一切行为。</p>
             <p>11.4抵押人有逃避抵押权人监督、拖欠抵押担保债务、恶意逃废债等行为时，抵押权人有权将该种行为向有关单位通报，并在新闻媒体上公告。</p>
             <p>11.5若有任何已经签署的有关抵押的合同与本合同条款相冲突，以本合同相应条款为准。</p>
-            <p>11.6<strong>本合同经企业或者其他组织抵押人法定代表人或负责人或授权代表签字（或盖章）并加盖公章（自然人抵押人本人或授权代表签字）、抵押权人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
+            <p>11.6<strong>本合同经企业或者其他组织抵押人法定代表人或负责人或授权代表签字（或盖章）并加盖公章（自然人抵押人本人或授权代表签字）、抵押权人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong>
+            </p>
             <p>11.7本合同正本一式<strong><u>{{ counter_obj.counter_copies }}</u></strong>份，具有同等效力。</p>
-            <p><strong>第十二条  其他约定事项</strong></p>
+            <p><strong>第十二条 其他约定事项</strong></p>
             <div>{% include 'dbms/agree/agree_board/counter-other-space.html' %}</div>
-            <p><strong>抵押人声明：抵押人已对本合同各条款作全面、准确的理解，抵押权人应抵押人的要求作了相应的条款说明，签约各方对本合同含义理解认识一致，不存在任何歧义。抵押人对本合同的签署意味着对本合同条款的全面理解、接受和对声明内容的确认，否则应不予签署。</strong></p>
+            <p><strong>抵押人声明：抵押人已对本合同各条款作全面、准确的理解，抵押权人应抵押人的要求作了相应的条款说明，签约各方对本合同含义理解认识一致，不存在任何歧义。抵押人对本合同的签署意味着对本合同条款的全面理解、接受和对声明内容的确认，否则应不予签署。</strong>
+            </p>
         </div>
     </div>
+    <!--签字页-->
+    <div class="split">
+        <p>(此页无正文)</p>
+        <div class="sign-page">
+            <div class="sign-page-j">{% include 'dbms/agree/agree_board/sign-j.html' %}</div>
+            <div class="sign-page-y">{% include 'dbms/agree/agree_board/counter/_c/counter-sign-y.html' %}</div>
+            <div class="sign-page-b">
+                <p>丙方（公章或合同专用章）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+                <p>法定代表人（或授权代理人）：<strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong></p>
+                <p>（签字或盖章）</p>
+                {% include 'dbms/agree/agree_board/sign-date.html' %}
+            </div>
+        </div>
+    </div>
+    <!--附件页-->
     <div class="split">
         <div>{% include 'dbms/agree/agree_board/loan_co/mortgage-list.html' %}</div>
     </div>
