--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-x.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-x.html
@@ -1,10 +1,153 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="contain">
+    <!--封面-->
+    <div class="split">
+        <div>{% include 'dbms/agree/agree_board/loan_co/cover.html' %}</div>
+    </div>
+    <!--正文-->
+    <div class="split">
+        <!--合同当事人-->
+        <div>
+            <div class="agree-tit"><strong>{{ counter_obj.get_counter_name_display }}</strong></div>
+            <!--保证人信息-->
+            <div>{% include 'dbms/agree/agree_board/loan_co/hp-x.html' %}</div>
+            <div style="padding-bottom: 15pt">
+                <p>债权人：<u>成都武侯武兴小额贷款有限责任公司</u></p>
+                <p>法定代表人（负责人）：<u>黄一平</u></p>
+                <p>住所：<u>成都市武侯区武科西五路360号西部智谷B区2栋3单元10楼</u></p>
+            </div>
+        </div>
+        <!--合同主体-->
+        <div>
+            <p>为保障债权人与主合同债务人<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong>于{% include 'dbms/agree/agree_board/date-period.html' %}所签订的编号为:<strong><u>{{ agree_obj.agree_num }}</u></strong>号的《{{ agree_obj.get_agree_name_display }}》（以下称主合同）项下的债权，保证人愿意为主合同项下的债权向债权人（也称主合同债权人）提供连带责任保证担保，保证人、债权人依照我国有关法律、法规，经协商一致，订立本合同。</p>
+            <p><strong>第一条 担保的主债权种类、金额和期限</strong></p>
+            <p>保证人担保的主债权为主合同项下贷款本金（大写）人民币<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}元</u>）；贷款利率为<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰（千分之<u>{{ agree_rate_cn_q }}</u>）</strong>；贷款期限为<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止（若主合同约定的《借款凭证》记载的贷款起始日期、到期日期与本起始日期、到期日期不一致的，以《借款凭证》的记载为准），共<u><strong>{{ agree_term_str }}</strong></u>个月零<u><strong>/</strong></u>天。
+            </p>
+            <p><strong>第二条 担保范围</strong></p>
+            <p>2.1保证人谨此承诺对主合同债务人现在及将来对债权人根据主合同承担的任何义务、责任承担保证责任。<strong>保证人承诺自行、主动关注主合同债务人是否按期清偿主债务，对主合同债务人未按期清偿主债务的于主债务期限届满次日起<u>伍</u>个工作日内主动向债权人偿还任何保证范围内的金额、款项或者其他项目。</strong></p>
+            <p>2.2保证的范围为主合同项下贷款本金及利息、违约金、损害赔偿金和债权人实现债权而发生的费用（包括但不限于诉讼费、财产保全费、执行费、仲裁费、律师费、差旅费、评估费、拍卖费、公告费及其他费用）以及其他所有主合同债务人的应付费用。</p>
+            <p>2.3保证人承诺，其作为首要债务人的地位，补偿债权人不时要求的任何由于主合同、保证合同、对主合同的抵押合同或质押合同因无效、可能无效、被撤销、可能被撤销、不可执行而对债权人造成的损失或相应责任、义务，无论在订立合同之时是否能预见。此项金额与债权人有权向主合同债务人请求的数额相当。</p>
+            <p><strong>第三条 保证方式</strong></p>
+            <p>3.1本合同项下的保证方式为<u><strong>连带责任保证</strong></u>，当主合同债务人未按主合同约定履行本合同担保范围内债务时，无论债权人对主合同项下的债权是否拥有其它担保或放弃、变更其他担保权利或担保权顺位，且无论其他担保是否有主合同债务人自己所提供，债权人均有权直接向保证人追偿，保证人应立即向债权人清偿主合同债务人的全部到期应付款项。</p>
+            <p>3.2若保证人为2人及2人以上，各保证人承担连带共同保证责任，即债权人有权要求其中的任何一个保证人承担全部保证责任，被要求承担保证责任的保证人负有担保债权人全部债权实现的义务。</p>
+            <p>3.3除第三人提供保证外，主合同债务人还同时提供了物的担保的，债权人可选择要求保证人承担保证责任或者要求主合同债务人承担其物的担保责任，不受保证和物的担保行使顺序的限制。</p>
+            <p>3.4在本合同项下，保证人须全额支付其应当支付的款项，不得提出任何抵销、抗辩，亦不得附带任何限制或条件。</p>
+            <p><strong>第四条 保证期间</strong></p>
+            <p>4.1保证期间为主合同生效之日起至主合同债务人的债务履行期限届满之日后三年止。</p>
+            <p>主合同中约定主合同债务人可分期履行还款义务的，保证期间按各期还款义务分别计算，自每期债务履行期限届满之日起，计至最后一期债务履行期限届满之日后三年止。</p>
+            <p>债权人宣布主合同项下债务全部提前到期的，以其宣布的提前到期日为债务履行期限届满日。</p>
+            <p>4.2根据《中华人民共和国担保法》第五条的规定，本合同双方特别约定如下：</p>
+            <p>本合同效力独立于主合同，主合同或其有关条款无效、被撤销或者不可执行时不影响本合同的效力。对主合同债务人在主合同无效后应承担的返还财产或赔偿损失责任，保证人应承担连带责任。</p>
+            <p>债权人与主合同债务人解除借贷关系的，保证人对主合同债务人应当承担的债务和责任仍应承担保证责任。</p>
+            <p><strong>第五条 保证人的陈述与保证</strong></p>
+            <p>5.1保证人具有缔约能力，并具有代偿能力，能以自身名义履行本合同的义务并承担民事责任。</p>
+            <p>5.2保证人为企业或者其他组织的，其签订本合同已依法取得公司董事会或股东会（股东大会）等有权机构的批准，并取得所有必要的授权；保证人为自然人的，其具有民事权利能力和完全的民事行为能力。</p>
+            <p>5.3保证人未隐瞒任何已发生或即将发生的有可能使债权人不接受其为保证人的下列事件：</p>
+            <p>(1)与保证人有牵连的重大违纪、违法或被索赔事件；</p>
+            <p>(2)未结案的诉讼、仲裁事件；</p>
+            <p>(3)保证人承担的各类债务、或有负债，包括担不限于向第三人提供的抵（质）押担保；</p>
+            <p>(4)其它可能影响保证人财务状况和代偿能力的情况。</p>
+            <p>5.4签署和履行本合同是保证人真实的意思表示，不存在任何法律上的瑕疵。</p>
+            <p>5.5保证人在签署和履行本合同过程中向债权人提供的全部文件、资料及信息是真实、准确、完整和有效的。</p>
+            <p>5.6保证人知悉并同意主合同的全部条款，自愿为主合同债务人提供保证，并保证按本合同约定履行连带清偿义务。</p>
+            <p><strong>第六条 保证人的义务</strong></p>
+            <p>6.1主合同债务人未按时足额偿还贷款本金、利息及2.2款规定的任何金额或者出现主合同约定的其他违约事由或者未能偿还提前到期贷款的，保证人应无条件地向债权人立即支付主合同债务人的全部到期应付款项。</p>
+            <p>6.2保证人应配合债权人对其经营、财务状况、收入情况和资信情况的监督、检查，及时提供债权人要求的一切财务报表、其他资料及信息，并保证所提供的资料或信息是真实、完整和准确的。</p>
+            <p>6.3 保证期间，未经债权人书面同意，非担保公司的保证人不得向第三方提供任何担保。</p>
+            <p>6.4保证人应当在下列事项发生或可能发生之日起七日内书面通知债权人：</p>
+            <p>（1）企业或者其他组织保证人修改章程，变更企业或者其他组织名称、法定代表人、住所、通讯地址或营业范围等工商登记事项，做出对财务、人事有重大影响的决定或自然人保证人变更住所、国籍等；</p>
+            <p>（2）企业或者其他组织保证人拟申请破产或可能或已被债权人申请破产或自然人保证人工作、收入、婚姻、身体健康状况发生重大变化；</p>
+            <p>（3）受到行政或刑事处罚，涉及民事法律纠纷，或主要资产被采取了财产保全或其他司法强制措施；</p>
+            <p>（4）为第三方提供保证，并因此而对其财务状况或履行本合同项下义务的能力产生重大不利影响；</p>
+            <p>（5）签署对其经营和财务状况有重大影响的合同；</p>
+            <p>（6）停产、歇业、解散、停业整顿、被撤销或营业执照被吊销；</p>
+            <p>（7）法定代表人（负责人）或主要管理人员涉及违法活动；</p>
+            <p>（8）经营出现严重困难，财务状况恶化，或发生对保证人正常经营、财务状况或偿债能力有负面影响的其他事件。</p>
+            <p>若债权人认为上述事项发生或者可能发生导致保证人失去代偿能力或者可能失去代偿能力的，可以要求保证人提供新的担保。</p>
+            <p>6.5自然人保证人计划出售、赠与、出租、出借、转移、抵押、质押或以其他方式处分重要资产、资产的全部或大部分，应当至少提前十五天书面通知债权人，并且在主合同项下债权得到全部清偿前，除非得到债权人书面同意，不应采取上述行动。</p>
+            <p>6.6<strong>债权人和主合同债务人变更主合同（包括但不限于变更偿还币种、还款方式、贷款期限（含展期）、利率、贷款账号、还款账号、贷款用途、还款计划、起息日、结息日等内容）的，无论是否通知保证人，保证人仍应承担连带保证责任。但是，未征得保证人书面同意增加合同金额、非因中国人民银行贷款基准利率调整或其他法定原因提高利率的，保证人仅按本合同约定的金额、利率承担保证责任</strong></p>
+            <p>6.7如果主合同债务人与保证人已经或将要就本合同项下的保证义务签订反担保合同，则该反担保合同不得在法律法规或事实上损害债权人在本合同项下享有的任何权利。</p>
+            <p>6.8在主合同债务人向债权人清偿主合同项下所有债务之前，保证人不向主合同债务人或其他担保人行使因履行本合同所享有的反担保或者其他追偿权。</p>
+            <p>6.9 保证人的保证责任具有持续性，不因出现下列任何一种情况而减免：</p>
+            <p>（1）债权人或主合同债务人发生改制、合并、被撤销、破产、兼并、分立、增加注册资本、合资、联营、名称变更等情形；</p>
+            <p>（2）债权人行使、不行使、未成功行使其他担保权利；</p>
+            <p>（3）债权人委托第三方履行其在本合同项下的义务，或向第三人转让其在主合同项下债权；</p>
+            <p>（4）债权人和主合同债务人达成任何和解协议。</p>
+            <p>6.10保证人配合债权人对主合同债务人财产情况、收入和资信情况、经营和财务状况监督、检查，及时提供债权人要求的一切财务报表、其他资料及信息，并保证所提供文件、资料和信息是真实、完整和准确的。</p>
+            <p>6.11保证人授权债权人及债权人的往来银行向中国人民银行、中国银联股份有限公司及其他机构或单位查询保证人的信用记录以决定是否由保证人担保，授权债权人将保证人的信用信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
+            <p>6.12 主合同债务人出现任何违约行为，包括但不限于擅自改变贷款用途等，不对保证人构成任何影响，保证人仍应按照本合同承担保证责任。</p>
+            <p><strong>第七条 债务清偿顺序（及保证金质押）</strong></p>
+            <p>7.1债权人依照法律规定或者本合同约定，可以对保证人行使抵销权或代位权。</p>
+            <p>7.2保证人支付款项或债权人扣划所得款项或债权人行使抵销权、代位权所得款项不足以清偿主合同债务人全部债务时，应按下列顺序进行抵偿：</p>
+            <p>（1）到期未付的费用、补偿金、违约金、赔偿金（如有）；</p>
+            <p>（2）到期未付的利息；</p>
+            <p>（3）本金。</p>
+            <p>7.3保证人或次债务人用以抵偿的债务币种不一致的,按中国人民银行在抵偿日公布的汇率中间价折算为抵偿债务的金额。</p>
+            <p>7.4保证人若为担保公司的，则：</p>
+            <p>（1）保证人在债权人指定银行开立保证金专户，并将其不少于在债权人处已担保借款余额<u>&nbsp\&nbsp</u>％（含<u>&nbsp\&nbsp</u>％）的金额存入该保证金专户，以用于同时质押担保本合同2.2款所述及保证范围内的债务；</p>
+            <p>（2）保证人须与债权人、债权人指定保证金专户开户银行三方签订资金监管协议（无论其名称如何），须明确授权债权人在（当）借款人未按期清偿贷款本息及其相关费用时有权指令保证金专户开户银行直接在该保证金账户中划收相关款项；且除非保证人担保责任正常解除或承担赔付责任，未经债权人书面同意，保证人不得以任何形式、名义动用该保证金专户中的资金；</p>
+            <p>（3）在保证人承担连带责任保证期间，债权人决定依据前述规定指令保证金专户开户银行从保证人保证金专户中划收有关款项之日，债权人须书面通知保证人（代偿通知）。债权人扣划后，亦须书面通知保证人。扣划资金后，若保证金低于担保借款余额的<u>&nbsp\&nbsp</u>％，保证人必须在<u>&nbsp\&nbsp</u>日内足额补充；若<u>&nbsp\&nbsp</u>日内保证人未足额补充，债权人有权宣布保证人所担保的债权提前到期，并要求保证人承担连带保证责任。</p>
+            <p><strong>第八条 公证、担保权实现及争议解决</strong></p>
+            <p>8.1 <strong>保证人若不履行或不完全履行合同约定的义务，保证人愿意接受依法强制执行。</strong></p>
+            <p>保证人、债权人双方均同意自本合同签署后3个工作日内到债权人所在地公证机构申请对本合同办理具有强制执行效力的公证。</p>
+            <p>8.2<strong>如果保证人未按本合同约定及时承担主合同债务人对债权人的债务，债权人有权向公证本合同的公证机构申请执行证书并凭本合同的公证书和执行证书向有管辖权的人民法院申请强制执行保证人的财产，保证人自愿接受该有管辖权的人民法院强制执行。</strong></p>
+            <p>8.3 若因任何原因，本合同不能/未以强制执行公证书直接由人民法院强制执行的，关于本合同的所有争议、纠纷，选择下列第<u>（2）</u>种方式解决：</p>
+            <p>（1）提交<u>&nbsp\&nbsp}</u>仲裁委员会仲裁；</p>
+            <p>（2）向债权人所在地有管辖权的法院提起诉讼。</p>
+            <p><strong>第九条 通讯及送达</strong></p>
+            <p>9.1本合同规定一方向相对方发出的通知或书面函件可通过当面递交、专递信函、传真或电子邮件、手机短信等电子通讯方式送达。</p>
+            <p>9.2本合同各方确认的有效送达地址如下：</p>
+            <!--保证人送达信息-->
+            <div>
+                {% for custom in counter_obj.assure_counter.custome.all %}
+                    <p>如至保证人：<u><strong>{{ custom.name }}</strong></u></p>
+                    <p>地址：<u><strong>{{ custom.contact_addr }}</strong></u></p>
+                    <p>电话：<u><strong>{{ custom.contact_num }}</strong></u></p>
+                    <p>收件人：<u><strong>{{ custom.linkman }}</strong></u></p>
+                    {% if custom.person_custome.spouses %}
+                        <div>
+                            <p>如至保证人：<u><strong>{{ custom.person_custome.spouses.name }}</strong></u></p>
+                            <p>地址：<u><strong>{{ custom.person_custome.spouses.contact_addr }}</strong></u></p>
+                            <p>电话：<u><strong>{{ custom.person_custome.spouses.contact_num }}</strong></u></p>
+                            <p>收件人：<u><strong>{{ custom.person_custome.spouses.linkman }}</strong></u></p>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <p>如至债权人：成都武侯武兴小额贷款有限责任公司</p>
+            <p>地址：成都市武侯区武科西五路360号西部智谷B区2栋4单元4楼附楼</p>
+            <p>电话：028-85014022</p>
+            <p>收件人：成都武侯武兴小额贷款有限责任公司</p>
+            <p>9.3债权人对保证人发出的函件在以下时间通知被视为已经送达：</p>
+            <p>（1）如果以当面递交方式送达，送达指定地址并签署回执或其他送达证明；</p>
+            <p>（2）如果是以专递信函方式送达，为递交日后的第三个工作日；</p>
+            <p>（3）如果是以传真的方式送达，为发送传真方的传真机发送的报告确认书（表明已向相关传真号码发送完整的、未中断的传真）上标记之日视为已送达收件人；</p>
+            <p>（4）如果是以电子邮件、手机短信等数据电文形式的，该等通知自发送之日视为已送达收件人。</p>
+            <p>9.4本合同有效期间，任何一方的住所或通讯地址、联系人、联系方式等发生变更的，应当在变更后立即通知或可能发生前7个工作日内书面通知相对方；企业或者其他组织保证人名称(自然人保证人姓名)、住所等发生变化而未书面通知债权人，债权人按本合同所载名称（姓名）、通讯地址、住所向保证人发送所有文书，视同已向保证人送达。</p>
+            <p>9.5债权人通过新闻媒体进行公告催收，公告期间超过15天即视为对主合同债务人、保证人完成送达。</p>
+            <p><strong>第十条 其他条款</strong></p>
+            <p>10.1保证人有违反本合同的任何行为或其它行为、情形的出现导致其代偿能力不足或债权人有理由相信其代偿能力不足的，债权人有权提前终止主合同，并自该行为、情形、理由出现之时有权要求主合同债务人、保证人共同或单独清偿全部债务。</p>
+            <p>10.2本合同所约定的保证人应承担的债权人所花费律师费（律师代理费）是指债权人依据四川省现行律师服务收费规定如/即《四川省律师法律服务收费行业指导标准》(川发改价格〔2018〕93号)所计算并承担/支付/花费的费用；如果确实由于案情需要，债权人采用了其他付费标准或计费方式，保证人应据实承担。</p>
+            <p>10.3保证人有逃避债权人监督、拖欠保证债务、恶意逃废债务或者协助债务人逃废债务等行为时，债权人有权将该种行为向有关单位通报，并在新闻媒体上公告。</p>
+            <p>10.4<strong>本合同经企业或者其他组织保证人法定代表人或负责人或授权代表签字（或盖章）并加盖公章(自然人保证人本人或授权代表签字)、债权人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
+            <p>10.5本合同正本一式<strong><u>{{ counter_obj.counter_copies }}</u></strong>份，具有同等效力。</p>
+            <p><strong>第十一条 其他约定事项</strong></p>
+            <div>{% include 'dbms/agree/agree_board/counter-other-space.html' %}</div>
+            <p><strong>保证人声明：债权人已提请保证人注意对本合同各条款作全面、准确的理解，并应保证人的要求作了相应的条款说明，签约各方对本合同含义理解认识一致，不存在任何歧义。保证人对本合同的签署意味着对声明内容的确认，否则应不予签署。</strong>
+            </p>
+        </div>
+    </div>
+    <!--签字页-->
+    <div class="split">
+        <p>本页为签字页（无正文）。</p>
+        <div class="sign-page">
+            <div class="sign-page-j">{% include 'dbms/agree/agree_board/sign-j.html' %}</div>
+            <div class="sign-page-y">{% include 'dbms/agree/agree_board/counter/_c/counter-sign-y.html' %}</div>
+            <div class="sign-page-b">
+                <p>丙方（公章或合同专用章）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+                <p>法定代表人（或授权代理人）：<strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong></p>
+                <p>（签字或盖章）</p>
+                {% include 'dbms/agree/agree_board/sign-date.html' %}
+            </div>
+        </div>
+    </div>
+</div>
