--- a/A_dbms/templates/dbms/article/lending/tab/lending-agree.html
+++ b/A_dbms/templates/dbms/article/lending/tab/lending-agree.html
@@ -10,6 +10,7 @@
             <th>通知金额</th>
             <th>放款金额</th>
             <th>还款金额</th>
+            <th>在保余额</th>
             <th>合同状态</th>
             {% if lending_operate %}
                 <th>操作</th>
@@ -30,6 +31,7 @@
                 <td align="right">{{ agree.agree_notify_sum }}</td>
                 <td align="right">{{ agree.agree_provide_sum }}</td>
                 <td align="right">{{ agree.agree_repayment_sum }}</td>
+                <td align="right">{{ agree.agree_balance }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
                 {% if lending_operate %}
                     <td><a class="btn btn-danger btn-xs delGuaranteeB">删除</a></td>
