--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
@@ -1,28 +1,223 @@
-<p><u>{{ counter_obj.counter_num }}</u>《{{ counter_obj.get_counter_name_display }}》项下</p>
-<div align="center"><strong>{% if counter_typ in D_COUNTER_TYP_LIST %}抵押财产{% elif counter_typ in Z_COUNTER_TYP_LIST %}质押权利{% endif %}清单</strong></div>
-<p style="float: right">{% if counter_warrant_typ == 1 or counter_warrant_typ == 5 %}单位：万元{% elif counter_warrant_typ == 21 %}_{% elif counter_warrant_typ == 31 %}单位：元{% endif %}</p>
-{#WARRANT_TYP_LIST = [#}
-{#        (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
-{#        (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-<table cellspacing="0" cellpadding="0" >
+<div>附件一：</div>
+<div align="center" style="padding-bottom: 25pt"><strong>抵押物清单</strong></div>
+<!--清单表格-->
+<table cellspacing="0" cellpadding="0">
     {% for warrant in counter_obj.warrant_counter.warrant.all %}
         {% if warrant.warrant_typ == 1 or warrant.warrant_typ == 2 %}
-            {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-1.html' %}
-        {% elif warrant.warrant_typ == 5 %}
-            {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-5.html' %}
-        {% elif warrant.warrant_typ == 21 %}
-            {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-21.html' %}
-        {% elif warrant.warrant_typ == 41 %}
-            {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-41.html' %}
-        {% elif warrant.warrant_typ == 51 %}
-            {% include 'dbms/agree/agree_board/counter/_a/warrant-typ-51.html' %}
-        {% else %}
-            <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
-            <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
-            <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
+            {% if forloop.counter == 1 %}
+                <tr>
+                    <td colspan="2" align="center">抵 押 人</td>
+                    <td colspan="5">
+                        {% for ownership in warrant.ownership_warrant.all %}
+                            {{ ownership.owner.name }}{% if not forloop.last %}、{% endif %}
+                        {% endfor %}
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">抵押财产名称</td>
+                    <td align="center">规划用途</td>
+                    <td align="center">面积(平方米)</td>
+                    <td align="center">处所</td>
+                    <td align="center">权利证书编号</td>
+                    <td align="center">评估价值（元）</td>
+                    <td align="center">备注</td>
+                </tr>
+                {% if warrant.warrant_typ == 2 %}
+                    {% for house_bag in warrant.housebag_warrant.all %}
+                        {% if forloop.counter == 1 %}
+                            <tr>
+                                <td rowspan="{{ counter_warrant_list_count }}">{{ counter_property_type }}</td>
+                                <td>{{ house_bag.get_housebag_app_display }}</td>
+                                <td align="right">{{ house_bag.housebag_area }}</td>
+                                <td>{{ house_bag.housebag_locate }}</td>
+                                <td rowspan="{{ warrant.housebag_warrant.all.count }}">
+                                    {% for ownership in warrant.ownership_warrant.all %}
+                                        {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
+                                    {% endfor %}
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td>{{ house_bag.get_housebag_app_display }}</td>
+                                <td align="right">{{ house_bag.housebag_area }}</td>
+                                <td>{{ house_bag.housebag_locate }}</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    <tr>
+                        <td rowspan="{{ counter_warrant_list_count }}">{{ counter_property_type }}</td>
+                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
+                        <td align="right">{{ warrant.house_warrant.house_area }}</td>
+                        <td>{{ warrant.house_warrant.house_locate }}</td>
+                        <td>
+                            {% for ownership in warrant.ownership_warrant.all %}
+                                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
+                            {% endfor %}
+                        </td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                {% endif %}
+            {% else %}
+                {% if warrant.warrant_typ == 2 %}
+                    {% for house_bag in warrant.housebag_warrant.all %}
+                        {% if forloop.counter == 1 %}
+                            <tr>
+                                <td>{{ house_bag.get_housebag_app_display }}</td>
+                                <td align="right">{{ house_bag.housebag_area }}</td>
+                                <td>{{ house_bag.housebag_locate }}</td>
+                                <td rowspan="{{ warrant.housebag_warrant.all.count }}">
+                                    {% for ownership in warrant.ownership_warrant.all %}
+                                        {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
+                                    {% endfor %}
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td>{{ house_bag.get_housebag_app_display }}</td>
+                                <td align="right">{{ house_bag.housebag_area }}</td>
+                                <td>{{ house_bag.housebag_locate }}</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    <tr>
+                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
+                        <td align="right">{{ warrant.house_warrant.house_area }}</td>
+                        <td>{{ warrant.house_warrant.house_locate }}</td>
+                        <td>
+                            {% for ownership in warrant.ownership_warrant.all %}
+                                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
+                            {% endfor %}
+                        </td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                {% endif %}
+            {% endif %}
+            <tr>
+                <td colspan="7" style="text-indent: 16pt">
+                    本《抵押物清单》是编号为{{ counter_obj.counter_num }}《{{ counter_obj.get_counter_name_display }}》的组成部分。
+                </td>
+            </tr>
         {% endif %}
-
     {% endfor %}
 </table>
+<!--签单签字信息-->
+<table>
+    <tr style="height: 36pt">
+        {% if counter_typ in D_COUNTER_TYP_LIST %}
+            <td style="border: 0pt; width: 115pt" align="right" valign="top">乙方（抵押人）：</td>
+        {% elif counter_typ in Z_COUNTER_TYP_LIST %}
+            <td style="border: 0pt; width: 115pt" align="right" valign="top">乙方（出质人）：</td>
+        {% endif %}
+        <td style="border: 0pt; width: 25%" valign="top">
+            <!--WARRANT_TYP_LIST = [
+                (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),
+                (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]-->
+            {% for warrant in counter_obj.warrant_counter.warrant.all %}
+                {% if forloop.first %}
+                    {#(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')#}
+                    {% if warrant.ownership_warrant.all %}
+                        <strong><u>{% for ownership in warrant.ownership_warrant.all %}
+                            {{ ownership.owner.name }}{% if not forloop.last %}、{% endif %}
+                        {% endfor %}</u></strong>
+                        {#(11, '应收账款')#}
+                    {% elif warrant.warrant_typ == 11 %}
+                        <strong><u>{{ counter_receive_obj.receive_owner.name }}</u></strong>
+                        {#(21, '股权')#}
+                    {% elif warrant.warrant_typ == 21 %}
+                        <strong><u>{{ counter_stock_obj.stock_owner.name }}</u></strong>
+                        {#(31, '票据')#}
+                    {% elif warrant.warrant_typ == 31 %}
+                        <strong><u>{{ counter_draft_obj.draft_owner.name }}</u></strong>
+                        {#(41, '车辆')#}
+                    {% elif warrant.warrant_typ == 41 %}
+                        <strong><u>{{ warrant.vehicle_warrant.vehicle_owner.name }}</u></strong>
+                        {#(51, '动产')#}
+                    {% elif warrant.warrant_typ == 51 %}
+                        <strong><u>{{ warrant.chattel_warrant.chattel_owner.name }}</u></strong>
+                    {% elif warrant.warrant_typ == 55 %}
+                        <strong><u>{{ warrant.other_warrant.other_owner.name }}</u></strong>
+                    {% else %}
+                        <strong><u>？？？？？？？？？？？？</u></strong>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        </td>
 
-{% include 'dbms/agree/agree_board/counter/_a/warrant-sign.html' %}
+        {% if counter_typ in D_COUNTER_TYP_LIST %}
+            <td style="border: 0pt; width:135pt" align="right" valign="top">甲方（抵押权人）：</td>
+        {% elif counter_typ in Z_COUNTER_TYP_LIST %}
+            <td style="border: 0pt; width:115pt" align="right" valign="top">甲方（质权人）：</td>
+        {% endif %}
+        <td style="border: 0pt" valign="top">成都武侯中小企业融资担保有限责任公司</td>
+
+    </tr>
+    <tr style="height: 32pt">
+        <td style="border: 0pt" align="right">法定代表人：</td>
+        <td style="border: 0pt">
+            <!--WARRANT_TYP_LIST = [
+                (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),
+                (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]-->
+            {% for warrant in counter_obj.warrant_counter.warrant.all %}
+                {% if forloop.first %}
+                    {#(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')#}
+                    {% if warrant.ownership_warrant.all %}
+                        <strong><u>{% for ownership in warrant.ownership_warrant.all %}
+                            {% if ownership.owner.company_custome %}
+                                {{ ownership.owner.company_custome.representative }}
+                            {% endif %}
+                        {% endfor %}</u></strong>
+                        {#(11, '应收账款')#}
+                    {% elif warrant.warrant_typ == 11 %}
+                        {% if warrant.receive_warrant.receive_owner.company_custome %}
+                            <strong><u>{{ warrant.receive_warrant.receive_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                        {#(21, '股权')#}
+                    {% elif warrant.warrant_typ == 21 %}
+                        {% if warrant.stock_warrant.stock_owner.company_custome %}
+                            <strong><u>{{ warrant.stock_warrant.stock_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                        {#(31, '票据')#}
+                    {% elif warrant.warrant_typ == 31 %}
+                        {% if warrant.draft_warrant.draft_owner.company_custome %}
+                            <strong><u>{{ warrant.draft_warrant.draft_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                        {#(41, '车辆')#}
+                    {% elif warrant.warrant_typ == 41 %}
+                        {% if warrant.vehicle_warrant.vehicle_owner.company_custome %}
+                            <strong><u>{{ warrant.vehicle_warrant.vehicle_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                        {#(51, '动产')#}
+                    {% elif warrant.warrant_typ == 51 %}
+                        {% if warrant.chattel_warrant.chattel_owner.company_custome %}
+                            <strong><u>{{ warrant.chattel_warrant.chattel_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                    {% elif warrant.warrant_typ == 55 %}
+                        {% if warrant.other_warrant.other_owner.company_custome %}
+                            <strong><u>{{ warrant.other_warrant.other_owner.company_custome.representative }}</u></strong>
+                        {% endif %}
+                    {% else %}
+                        <strong><u>？？？？？？？？？？？？</u></strong>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        </td>
+        <td style="border: 0pt" align="right">法定代表人：</td>
+        <td style="border: 0pt">何长见</td>
+    </tr>
+    <tr style="height: 32pt">
+        <td style="border: 0pt" colspan="2">（授权代理人）签字：</td>
+        <td style="border: 0pt" colspan="2">（授权代理人）签字：</td>
+    </tr>
+</table>
