--- a/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/lending_order.html
@@ -3,8 +3,10 @@
         <thead>
         <tr style="text-align: center">
             <th>发放次序</th>
-            <th>授信金额（元）</th>
-            <th>放款金额（元）</th>
+            <th>授信金额</th>
+            <th>放款金额</th>
+            <th>还款金额</th>
+            <th>在保余额）</th>
             <th>备注</th>
             <th>操作</th>
         </tr>
@@ -33,10 +35,12 @@
                         </a>
                     </td>
                 {% endif %}
-                <td>{{ lending.order_amount }}</td>
-                <td>{{ lending.lending_provide_sum }}</td>
+                <td align="right">{{ lending.order_amount }}</td>
+                <td align="right">{{ lending.lending_provide_sum }}</td>
+                <td align="right">{{ lending.lending_repayment_sum }}</td>
+                <td align="right">{{ lending.lending_balance }}</td>
                 <td>{{ lending.remark|default_if_none:"" }}</td>
-                <td><a class="btn btn-primary btn-xs delLendingOrderB">删除</a></td>
+                <td align="center"><a class="btn btn-primary btn-xs delLendingOrderB">删除</a></td>
             <tr>
         {% endfor %}
         </tbody>
